# Snakegame-Cpp

./: .gitignore  CMakeLists.txt  snake_game_readme.md
include/: Board.h  Game.h  Snake.h  Utils.h
src/: Board.cpp  Game.cpp  Snake.cpp  Utils.cpp  main.cpp
